Refatora visual dos componentes para maior realismo

--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 
         <div id="lamp" class="component">
             <span>Lâmpada</span>
-            <div class="terminal return" data-component="lamp" data-terminal="return" title="Retorno (Preto)"></div>
-            <div class="terminal neutral" data-component="lamp" data-terminal="neutral" title="Neutro (Azul)"></div>
+            <!-- Added socket div for styling -->
+            <div id="lamp-socket">
+                <div class="terminal return" data-component="lamp" data-terminal="return" title="Retorno (Preto)"></div>
+                <div class="terminal neutral" data-component="lamp" data-terminal="neutral" title="Neutro (Azul)"></div>
+            </div>
             <div id="lamp-bulb" class="lamp-off"></div>
         </div>
 
