--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 
         <div id="lamp" class="component">
             <span>Lâmpada</span>
-            <!-- Added socket div for styling -->
-            <div id="lamp-socket">
+            <div class="lamp-image">
+                <img src="images/lamp.png" alt="Lâmpada" id="lamp-img">
                 <div class="terminal return" data-component="lamp" data-terminal="return" title="Retorno (Preto)"></div>
                 <div class="terminal neutral" data-component="lamp" data-terminal="neutral" title="Neutro (Azul)"></div>
             </div>
-            <div id="lamp-bulb" class="lamp-off"></div>
         </div>
 
         <svg id="wiring-layer"></svg>
