--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
         <div id="lamp" class="component">
             <span>Lâmpada</span>
-            <div class="lamp-image">
-                <img src="images/lamp.png" alt="Lâmpada" id="lamp-img">
+            <div class="lamp-container">
+                <svg id="lamp-svg" width="80" height="120" viewBox="0 0 80 120">
+                    <!-- Lamp will be drawn here by JavaScript -->
+                </svg>
                 <div class="terminal return" data-component="lamp" data-terminal="return" title="Retorno (Preto)"></div>
                 <div class="terminal neutral" data-component="lamp" data-terminal="neutral" title="Neutro (Azul)"></div>
             </div>
